revised list view css to address spacing issue

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -664,10 +664,10 @@ button:nth-child(4):active {
 
 /* List View Styling */
 .list-tab-window {
-	flex-direction: row;
+	/* flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: flex-start;
-	align-items: flex-start;
+	align-items: flex-start; */
 	width: 95%;
 	height: 100%;
 }
